prac1y.output
Grammar

    0 $accept: root $end

    1 root: root statement
    2     | statement

    3 statement: ID ASSIGN expression NEWLINE
    4          | expression NEWLINE
    5          | NEWLINE

    6 expression: FUNC_SQRT PARENTHESIS_OPEN expression PARENTHESIS_CLOSE
    7           | FUNC_LOG PARENTHESIS_OPEN expression PARENTHESIS_CLOSE
    8           | expression COMP expression
    9           | PARENTHESIS_OPEN expression PARENTHESIS_CLOSE
   10           | expression POW expression
   11           | expression MOD expression
   12           | expression MULTIPLY expression
   13           | expression DIVIDE expression
   14           | expression ADD expression
   15           | expression SUBSTRACT expression
   16           | SUBSTRACT expression
   17           | ID
   18           | UTYPE


Terminals, with rules where they appear

$end (0) 0
error (256)
UTYPE (258) 18
ID (259) 3 17
NEWLINE (260) 3 4 5
ASSIGN (261) 3
ADD (262) 14
SUBSTRACT (263) 15 16
MULTIPLY (264) 12
DIVIDE (265) 13
POW (266) 10
MOD (267) 11
PARENTHESIS_OPEN (268) 6 7 9
PARENTHESIS_CLOSE (269) 6 7 9
FUNC_SQRT (270) 6
FUNC_LOG (271) 7
COMP (272) 8


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
root (19)
    on left: 1 2, on right: 0 1
statement (20)
    on left: 3 4 5, on right: 1 2
expression (21)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 3 4 6 7
    8 9 10 11 12 13 14 15 16


State 0

    0 $accept: . root $end

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 2
    NEWLINE           shift, and go to state 3
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    root        go to state 8
    statement   go to state 9
    expression  go to state 10


State 1

   18 expression: UTYPE .

    $default  reduce using rule 18 (expression)


State 2

    3 statement: ID . ASSIGN expression NEWLINE
   17 expression: ID .

    ASSIGN  shift, and go to state 11

    $default  reduce using rule 17 (expression)


State 3

    5 statement: NEWLINE .

    $default  reduce using rule 5 (statement)


State 4

   16 expression: SUBSTRACT . expression

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 13


State 5

    9 expression: PARENTHESIS_OPEN . expression PARENTHESIS_CLOSE

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 14


State 6

    6 expression: FUNC_SQRT . PARENTHESIS_OPEN expression PARENTHESIS_CLOSE

    PARENTHESIS_OPEN  shift, and go to state 15


State 7

    7 expression: FUNC_LOG . PARENTHESIS_OPEN expression PARENTHESIS_CLOSE

    PARENTHESIS_OPEN  shift, and go to state 16


State 8

    0 $accept: root . $end
    1 root: root . statement

    $end              shift, and go to state 17
    UTYPE             shift, and go to state 1
    ID                shift, and go to state 2
    NEWLINE           shift, and go to state 3
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    statement   go to state 18
    expression  go to state 10


State 9

    2 root: statement .

    $default  reduce using rule 2 (root)


State 10

    4 statement: expression . NEWLINE
    8 expression: expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    NEWLINE    shift, and go to state 19
    ADD        shift, and go to state 20
    SUBSTRACT  shift, and go to state 21
    MULTIPLY   shift, and go to state 22
    DIVIDE     shift, and go to state 23
    POW        shift, and go to state 24
    MOD        shift, and go to state 25
    COMP       shift, and go to state 26


State 11

    3 statement: ID ASSIGN . expression NEWLINE

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 27


State 12

   17 expression: ID .

    $default  reduce using rule 17 (expression)


State 13

    8 expression: expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression
   16           | SUBSTRACT expression .

    MULTIPLY  shift, and go to state 22
    DIVIDE    shift, and go to state 23
    POW       shift, and go to state 24
    MOD       shift, and go to state 25
    COMP      shift, and go to state 26

    $default  reduce using rule 16 (expression)


State 14

    8 expression: expression . COMP expression
    9           | PARENTHESIS_OPEN expression . PARENTHESIS_CLOSE
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    ADD                shift, and go to state 20
    SUBSTRACT          shift, and go to state 21
    MULTIPLY           shift, and go to state 22
    DIVIDE             shift, and go to state 23
    POW                shift, and go to state 24
    MOD                shift, and go to state 25
    PARENTHESIS_CLOSE  shift, and go to state 28
    COMP               shift, and go to state 26


State 15

    6 expression: FUNC_SQRT PARENTHESIS_OPEN . expression PARENTHESIS_CLOSE

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 29


State 16

    7 expression: FUNC_LOG PARENTHESIS_OPEN . expression PARENTHESIS_CLOSE

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 30


State 17

    0 $accept: root $end .

    $default  accept


State 18

    1 root: root statement .

    $default  reduce using rule 1 (root)


State 19

    4 statement: expression NEWLINE .

    $default  reduce using rule 4 (statement)


State 20

   14 expression: expression ADD . expression

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 31


State 21

   15 expression: expression SUBSTRACT . expression

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 32


State 22

   12 expression: expression MULTIPLY . expression

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 33


State 23

   13 expression: expression DIVIDE . expression

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 34


State 24

   10 expression: expression POW . expression

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 35


State 25

   11 expression: expression MOD . expression

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 36


State 26

    8 expression: expression COMP . expression

    UTYPE             shift, and go to state 1
    ID                shift, and go to state 12
    SUBSTRACT         shift, and go to state 4
    PARENTHESIS_OPEN  shift, and go to state 5
    FUNC_SQRT         shift, and go to state 6
    FUNC_LOG          shift, and go to state 7

    expression  go to state 37


State 27

    3 statement: ID ASSIGN expression . NEWLINE
    8 expression: expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    NEWLINE    shift, and go to state 38
    ADD        shift, and go to state 20
    SUBSTRACT  shift, and go to state 21
    MULTIPLY   shift, and go to state 22
    DIVIDE     shift, and go to state 23
    POW        shift, and go to state 24
    MOD        shift, and go to state 25
    COMP       shift, and go to state 26


State 28

    9 expression: PARENTHESIS_OPEN expression PARENTHESIS_CLOSE .

    $default  reduce using rule 9 (expression)


State 29

    6 expression: FUNC_SQRT PARENTHESIS_OPEN expression . PARENTHESIS_CLOSE
    8           | expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    ADD                shift, and go to state 20
    SUBSTRACT          shift, and go to state 21
    MULTIPLY           shift, and go to state 22
    DIVIDE             shift, and go to state 23
    POW                shift, and go to state 24
    MOD                shift, and go to state 25
    PARENTHESIS_CLOSE  shift, and go to state 39
    COMP               shift, and go to state 26


State 30

    7 expression: FUNC_LOG PARENTHESIS_OPEN expression . PARENTHESIS_CLOSE
    8           | expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    ADD                shift, and go to state 20
    SUBSTRACT          shift, and go to state 21
    MULTIPLY           shift, and go to state 22
    DIVIDE             shift, and go to state 23
    POW                shift, and go to state 24
    MOD                shift, and go to state 25
    PARENTHESIS_CLOSE  shift, and go to state 40
    COMP               shift, and go to state 26


State 31

    8 expression: expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   14           | expression ADD expression .
   15           | expression . SUBSTRACT expression

    MULTIPLY  shift, and go to state 22
    DIVIDE    shift, and go to state 23
    POW       shift, and go to state 24
    MOD       shift, and go to state 25
    COMP      shift, and go to state 26

    $default  reduce using rule 14 (expression)


State 32

    8 expression: expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression
   15           | expression SUBSTRACT expression .

    MULTIPLY  shift, and go to state 22
    DIVIDE    shift, and go to state 23
    POW       shift, and go to state 24
    MOD       shift, and go to state 25
    COMP      shift, and go to state 26

    $default  reduce using rule 15 (expression)


State 33

    8 expression: expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   12           | expression MULTIPLY expression .
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    POW   shift, and go to state 24
    COMP  shift, and go to state 26

    $default  reduce using rule 12 (expression)


State 34

    8 expression: expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   13           | expression DIVIDE expression .
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    POW   shift, and go to state 24
    COMP  shift, and go to state 26

    $default  reduce using rule 13 (expression)


State 35

    8 expression: expression . COMP expression
   10           | expression . POW expression
   10           | expression POW expression .
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    $default  reduce using rule 10 (expression)


State 36

    8 expression: expression . COMP expression
   10           | expression . POW expression
   11           | expression . MOD expression
   11           | expression MOD expression .
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    POW   shift, and go to state 24
    COMP  shift, and go to state 26

    $default  reduce using rule 11 (expression)


State 37

    8 expression: expression . COMP expression
    8           | expression COMP expression .
   10           | expression . POW expression
   11           | expression . MOD expression
   12           | expression . MULTIPLY expression
   13           | expression . DIVIDE expression
   14           | expression . ADD expression
   15           | expression . SUBSTRACT expression

    $default  reduce using rule 8 (expression)


State 38

    3 statement: ID ASSIGN expression NEWLINE .

    $default  reduce using rule 3 (statement)


State 39

    6 expression: FUNC_SQRT PARENTHESIS_OPEN expression PARENTHESIS_CLOSE .

    $default  reduce using rule 6 (expression)


State 40

    7 expression: FUNC_LOG PARENTHESIS_OPEN expression PARENTHESIS_CLOSE .

    $default  reduce using rule 7 (expression)
